Modifed lab3.ipynb

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -1138,27 +1138,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Common elements: [5]\n"
+      "Common elements: [3, 4, 5]\n"
      ]
     }
    ],
    "source": [
-    "# 14.Find the common elements in two lists using a for loop\n",
-    "\n",
     "list1 = [int(input()) for _ in range(5)]\n",
     "list2 = [int(input()) for _ in range(5)]\n",
+    "\n",
+    "set_list2 = set(list2)\n",
     "\n",
     "common_elements = []\n",
     "\n",
     "for element in list1:\n",
-    "    if element in list2:\n",
+    "    if element in set_list2:\n",
     "        common_elements.append(element)\n",
     "\n",
     "print(\"Common elements:\", common_elements)\n"
