--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
      "output_type": "stream",
      "text": [
       "Digits: 3\n",
-      "Letters: 5\n"
+      "Letters: 4\n"
      ]
     }
    ],
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1053,14 +1053,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of numbers: 95\n"
+      "Sum of numbers: 30\n"
      ]
     }
    ],
@@ -1080,14 +1080,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of numbers: 85\n"
+      "Sum of numbers: 150\n"
      ]
     }
    ],
@@ -1108,14 +1108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 12 14 15 16 18 20 "
+      "10 "
      ]
     }
    ],
@@ -1138,18 +1138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Common elements: [3, 4, 5]\n"
+      "Common elements: [1, 2, 3, 4, 5]\n"
      ]
     }
    ],
    "source": [
+    "#14.Find the common elements in two lists using a for loop\n",
     "list1 = [int(input()) for _ in range(5)]\n",
     "list2 = [int(input()) for _ in range(5)]\n",
     "\n",
@@ -1166,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
