made changes lab5

--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -19,7 +19,7 @@
     "class Student:\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
-    "        self.marks = [0, 0, 0]  # Initializing marks for three subjects with zeros\n",
+    "        self.marks = [0, 0, 0] \n",
     "\n",
     "    def set_marks(self, subject_index, marks):\n",
     "        self.marks[subject_index] = marks\n",
@@ -49,55 +49,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Number of Employees: 1\n",
       "\n",
-      "Employee Name: sourin\n",
+      "Employee Information:\n",
+      "Name: chetna\n",
+      "Designation: hr\n",
+      "Salary: $45000.00\n",
+      "\n",
+      "Employee Information:\n",
+      "Name: sourin\n",
       "Designation: dev\n",
-      "Salary: $123.0\n",
-      "\n"
+      "Salary: $50000.00\n",
+      "\n",
+      "Total Number of Employees: 2\n"
      ]
     }
    ],
    "source": [
-    "# Questiion 2\n",
+    "# Question 2\n",
     "class Employee:\n",
-    "    total_employees = 0  \n",
+    "    total_employees = 0 \n",
     "\n",
     "    def __init__(self, name, designation, salary):\n",
     "        self.name = name\n",
     "        self.designation = designation\n",
     "        self.salary = salary\n",
-    "        Employee.total_employees += 1 \n",
+    "        Employee.total_employees += 1\n",
     "\n",
     "    def display_employee_details(self):\n",
-    "        print(f\"Employee Name: {self.name}\")\n",
+    "        print(f\"\\nEmployee Information:\")\n",
+    "        print(f\"Name: {self.name}\")\n",
     "        print(f\"Designation: {self.designation}\")\n",
-    "        print(f\"Salary: ${self.salary}\")\n",
-    "        print()\n",
+    "        print(f\"Salary: ${self.salary:.2f}\")\n",
     "\n",
     "\n",
-    "num_employees = int(input(\"Enter the number of employees: \"))\n",
+    "name1 = input(\"Enter name for Employee 1: \")\n",
+    "designation1 = input(\"Enter designation for Employee 1: \")\n",
+    "salary1 = float(input(\"Enter salary for Employee 1: \"))\n",
     "\n",
-    "for _ in range(num_employees):\n",
-    "    name = input(\"Enter employee name: \")\n",
-    "    designation = input(\"Enter employee designation: \")\n",
-    "    salary = float(input(\"Enter employee salary: \"))\n",
-    "\n",
-    "\n",
-    "    employee = Employee(name, designation, salary)\n",
+    "name2 = input(\"Enter name for Employee 2: \")\n",
+    "designation2 = input(\"Enter designation for Employee 2: \")\n",
+    "salary2 = float(input(\"Enter salary for Employee 2: \"))\n",
     "\n",
     "\n",
+    "employee1 = Employee(name1, designation1, salary1)\n",
+    "employee2 = Employee(name2, designation2, salary2)\n",
     "\n",
-    "print(f\"Total Number of Employees: {Employee.total_employees}\\n\")\n",
-    "for _ in range(num_employees):\n",
-    "    employee.display_employee_details()\n"
+    "\n",
+    "employee1.display_employee_details()\n",
+    "employee2.display_employee_details()\n",
+    "\n",
+    "\n",
+    "print(f\"\\nTotal Number of Employees: {Employee.total_employees}\")\n"
    ]
   },
   {
@@ -456,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +474,12 @@
      "text": [
       "\n",
       "Person Information:\n",
-      "Person Information:\n",
       "Name: sourin\n",
       "Age: 21\n",
       "\n",
       "Faculty Information:\n",
-      "Person Information:\n",
-      "Name: sarita tripathy\n",
-      "Age: 30\n",
+      "Name: Dr. Sarita Tripathy\n",
+      "Age: 33\n",
       "Publications: 2\n"
      ]
     }
@@ -485,7 +492,6 @@
     "        self.age = age\n",
     "\n",
     "    def display_person_info(self):\n",
-    "        print(f\"Person Information:\")\n",
     "        print(f\"Name: {self.name}\")\n",
     "        print(f\"Age: {self.age}\")\n",
     "\n",
